--- a/src/main/resources/templates/requests/listRequests.html
+++ b/src/main/resources/templates/requests/listRequests.html
@@ -39,8 +39,8 @@
                             <a th:href="@{/request/details/{id} (id=${tmpRequest.id})}"
                                class="btn mb-3" ><i style="" class="fa-solid fa-arrow-right fa-fade fa-2x"></i></a>
                         </div>
-                        <div class="row" th:each="tmpRequestaaa : ${tmpRequest.getRequestAttachment()}">
-                            <div class="col-md-3 col-6" >
+                        <div class="row"  >
+                            <div class="col-md-3 " th:each="tmpRequestaaa : ${tmpRequest.getRequestAttachment()}">
                                 <img th:src="@{/docs/{i} (i = ${tmpRequestaaa.getName()})}"
                                      class="imgIncidence" alt="...">
                             </div>
